# pr2_doors

./: CMakeLists.txt  stack.xml
ANN_doors/: Makefile  manifest.xml
door_handle_detector/: CMakeLists.txt  manifest.xml
door_handle_detector/include/door_handle_detector/: doors_detector.h  geometric_helper.h  handle_detector.h
door_handle_detector/src/: doors_detector.cpp  handle_detector.cpp
door_handle_detector/src/cloud_geometry/: nearest.cpp  transforms.cpp
door_handle_detector/src/sample_consensus/: sac_model_line.cpp
door_msgs/: CMakeLists.txt  manifest.xml
pr2_doors_actions/: CMakeLists.txt  manifest.xml
pr2_doors_actions/config/: arm_ik_r_arm.yaml
pr2_doors_actions/include/pr2_doors_actions/: action_detect_door.h  action_detect_handle.h  action_grasp_handle.h  action_move_base_door.h  action_release_handle.h  door_reactive_planner.h  move_base_door_action.h
pr2_doors_actions/launch/: door_actions.xml
pr2_doors_actions/src/: action_detect_door.cpp  action_detect_handle.cpp  action_grasp_handle.cpp  action_move_base_door.cpp  action_release_handle.cpp  action_runner.cpp  action_unlatch_handle.cpp  door_reactive_planner.cpp  move_base_door_action.cpp
pr2_doors_actions/test/: test_executive.cpp  test_planner.cpp  trigger_doors_detector.cpp  trigger_doors_opener.cpp
pr2_doors_common/: CMakeLists.txt  manifest.xml
pr2_doors_common/src/: door_functions.cpp
pr2_doors_executive/: CMakeLists.txt  doors.launch  manifest.xml
pr2_doors_executive/config/: controllers.xml  navigation.xml  perception.xml
pr2_doors_executive/scripts/: executive.py  trigger_opendoor.py
pr2_doors_executive/src/: test_executive.cpp
pr2_laser_snapshotter/: CMakeLists.txt  manifest.xml
pr2_laser_snapshotter/src/: point_cloud_srv.cpp
tff_controller/: controller_plugins.xml  manifest.xml
tff_controller/include/tff_controller/: tff_controller.h
tff_controller/src/: tff_controller.cpp
